--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Bevy - template-Three</title>
+    <title>A Land: Dubai Metaverse</title>
 
     <!-- External CSS -->
     <link type="text/css" rel="stylesheet" href="assets/css/bootstrap.min.css">
