--- a/index.html
+++ b/index.html
@@ -978,19 +978,19 @@
                     <div class="footer_sec">
                         <i class="fa fa-envelope"></i>
                         <h3>Mail us on</h3>
-                        <a href="mailto:info@youwebsite.com">info@youwebsite.com</a>
+                        <a href="mailto:info@a.land">info@a.land</a>
                     </div>
                 </div>
                 <div class="col-sm-4">
                     <div class="footer_sec">
                         <i class="fab fa-skype"></i>
                         <h3>Lets Skype</h3>
-                        <a href="#">skype.tester</a>
+                        <a href="#">A Land</a>
                     </div>
                 </div>
             </div>
             <div class="copyrigt_text d-flex justify-content-between">
-                <span>© Copyright 2019 Bevy templates, Inc.</span>
+                <span>© Copyright 2022 A.Land Inc.</span>
                 <!-- social icons -->
                 <div class="social_div">
                     <ul class="social_list">
@@ -1020,7 +1020,7 @@
   <div class="modal-content">      
         <!-- Modal Header -->
         <div class="modal-header text-center">
-          <h3 class="modal-title">Join Us Now</h3>
+          <h3 class="modal-title">Play Now</h3>
           <p>Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam</p>
           <button title="Close (Esc)" type="button" class="mfp-close">×</button>
         </div>        
