--- a/index.html
+++ b/index.html
@@ -338,100 +338,15 @@
 
 
 
-    <!-- service Section -->
-    <section class="service_sec" id="service">
-        <div class="container">
-            <div class="sec_header text-center">
-                <h2 class="sec_heading wow fadeInLeft"><span>OUR LATEST Classes</span>We Offer Better Classes For
-                    Your Fitness</h2>
-                <p class="wow fadeInLeft">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla convallis
-                    pulvinar vestibulum. Doneceleifend, sem sed dictum. Lorem ipsum dolor sit amet, consectetur
-                    adipiscing elits</p>
-            </div>
-            <div class="servics_list">
-                <div class="row">
-                    <div class="col-sm-6 col-md-6 col-lg-4 wow slideInUp" data-wow-duration=".25s" data-wow-delay="0s">
-                        <div class="service_item">
-                            <div class="service_thumb"><i class="fas fa-running"></i></div>
-                            <div class="service_content">
-                                <h4>Running</h4>
-                                <p>Lorem ipsum dolor sit amet. Con eleifend sem sed dictum mattis sectetur elit. Nulla
-                                    convallis pul.</p>
-                                <a href="#" class="btn orange_gradient">Read More</a>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-sm-6 col-md-6 col-lg-4 wow slideInUp" data-wow-duration="0.5s" data-wow-delay="0s">
-                        <div class="service_item">
-                            <div class="service_thumb"><i class="fas fa-biking"></i></div>
-                            <div class="service_content">
-                                <h4>Cycling</h4>
-                                <p>Lorem ipsum dolor sit amet. Con eleifend sem sed dictum mattis sectetur elit. Nulla
-                                    convallis pul.</p>
-                                <a href="#" class="btn orange_gradient">Read More</a>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-sm-6 col-md-6 col-lg-4 wow slideInUp" data-wow-duration="0.75s" data-wow-delay="0s">
-                        <div class="service_item">
-                            <div class="service_thumb"><i class="fas fa-dumbbell"></i></div>
-                            <div class="service_content">
-                                <h4>Weight Lifting</h4>
-                                <p>Lorem ipsum dolor sit amet. Con eleifend sem sed dictum mattis sectetur elit. Nulla
-                                    convallis pul.</p>
-                                <a href="#" class="btn orange_gradient">Read More</a>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-sm-6 col-md-6 col-lg-4 wow slideInUp" data-wow-duration="1s" data-wow-delay="0s">
-                        <div class="service_item">
-                            <div class="service_thumb"><i class="fas fa-walking"></i></div>
-                            <div class="service_content">
-                                <h4>MEDICATION</h4>
-                                <p>Lorem ipsum dolor sit amet. Con eleifend sem sed dictum mattis sectetur elit. Nulla
-                                    convallis pul.</p>
-                                <a href="#" class="btn orange_gradient">Read More</a>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-sm-6 col-md-6 col-lg-4 wow slideInUp" data-wow-duration="1.25s" data-wow-delay="0s">
-                        <div class="service_item">
-                            <div class="service_thumb"><i class="fas fa-male"></i></div>
-                            <div class="service_content">
-                                <h4>YOGA</h4>
-                                <p>Lorem ipsum dolor sit amet. Con eleifend sem sed dictum mattis sectetur elit. Nulla
-                                    convallis pul.</p>
-                                <a href="#" class="btn orange_gradient">Read More</a>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-sm-6 col-md-6 col-lg-4 wow slideInUp" data-wow-duration="1.50s" data-wow-delay="0s">
-                        <div class="service_item">
-                            <div class="service_thumb"><i class="fas fa-swimmer"></i></div>
-                            <div class="service_content">
-                                <h4>Swimming</h4>
-                                <p>Lorem ipsum dolor sit amet. Con eleifend sem sed dictum mattis sectetur elit. Nulla
-                                    convallis pul.</p>
-                                <a href="#" class="btn orange_gradient">Read More</a>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <a href="#" class="btn browse_btn orange_gradient wow slideInUp" data-wow-duration="1.75s"
-                    data-wow-delay="0s">browse More</a>
-            </div>
-        </div>
-    </section><!-- /. service Section -->
+ 
 
 
     <!-- Team Section -->
     <section class="team_sec" id="team">
         <div class="container-fluid">
             <div class="sec_header text-center">
-                <h2 class="sec_heading wow fadeInLeft"><span>OUR Team</span>MEET OUR TRAINERS</h2>
-                <p class="wow fadeInLeft">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla convallis
-                    pulvinar vestibulum. Doneceleifend, sem sed dictum. Lorem ipsum dolor sit amet, consectetur
-                    adipiscing elits</p>
+                <h2 class="sec_heading wow fadeInLeft"><span>OUR Team</span>MEET OUR Team</h2>
+                <p class="wow fadeInLeft">We have top skilled memeber in our team for around the world!</p>
             </div>
             <div class="team_list">
                 <div class="team_member">
@@ -789,10 +704,8 @@
     <section class="contact_sec" id="contact">
         <div class="sec_header text-center">
             <div class="container">
-                <h2 class="sec_heading wow fadeInUp"><span>Contact us</span>Start Your Fitness Class</h2>
-                <p class="wow fadeInUp">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla convallis
-                    pulvinar vestibulum. Doneceleifend, sem sed dictum. Lorem ipsum dolor sit amet, consectetur
-                    adipiscing elits</p>
+                <h2 class="sec_heading wow fadeInUp"><span>Contact us</span>Add your bussiness to A Land Metaverse!</h2>
+                <p class="wow fadeInUp">we're reviwing any request about adding the new bussiness to A Land. </p>
             </div>
         </div>
 
@@ -808,7 +721,7 @@
                             <hr>
                             <h5><i class="fa fa-map-marker"></i> 1234 Some Avenue, New York, NY 56789
                             </h5>
-                            <h5><i class="fa fa-envelope"></i> info@youwebsite.com
+                            <h5><i class="fa fa-envelope"></i> info@a.land
                             </h5>
                             <h5><i class="fa fa-phone"></i> (123) 456-7890
                             </h5>
