--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
                                     <li class="menu-item"><a href="#contact">Contact</a></li>
                                 </ul>
                             </div>
-                            <a href="#joiningPopup" class="get_quote btn orange_gradient open-popup-link">Join Us Now</a>
+                            <a href="#joiningPopup" class="get_quote btn orange_gradient open-popup-link">Play Now</a>
                             <a class="menu-bar mobile-navigation" href="javascript:void(0)">
                                 <span class="menu-btn-icon">
                                     <span></span>
@@ -113,7 +113,7 @@
                             printing and typesetting industry. Lorem Ipsum has been the industry's standard
                             dummy text ever since the 1500s</p>
                         <a href="#" class="btn btn_white" data-animation="fadeInUp" data-delay="1.6s">Read More</a>
-                        <a href="#joiningPopup" class="btn btn_outline open-popup-link" data-animation="fadeInUp" data-delay="1.6s">Join Now</a>
+                        <a href="#joiningPopup" class="btn btn_outline open-popup-link" data-animation="fadeInUp" data-delay="1.6s">Play Now</a>
                     </div>
                 </div>
             </div>
@@ -312,7 +312,7 @@
                 <div class="col-md-6">
                     <div class="lets_work_block text-center" style="background-image: url(assets/images/template-three/lets-work-bg-1.jpg);">
                         <div class="lets_work_block_inner">
-                            <h2><span>Let's Work Together</span>Start Your Gym</h2>
+                            <h2><span>Let's Work Together</span>Start Your Business</h2>
                             <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
                             <a href="#" class="btn btn_white">START WITH US NOW</a>
                         </div>
@@ -323,7 +323,7 @@
                         <div class="lets_work_block_inner">
                             <h2><span>Join our Team</span>We Are Hiring</h2>
                             <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
-                            <a href="#joiningPopup" class="btn btn_white open-popup-link">JOIN US NOW</a>
+                            <a href="#joiningPopup" class="btn btn_white open-popup-link">PLAY NOW</a>
                         </div>
                     </div>
                 </div>
@@ -339,7 +339,7 @@
     <section class="team_sec" id="team">
         <div class="container-fluid">
             <div class="sec_header text-center">
-                <h2 class="sec_heading wow fadeInLeft"><span>OUR Team</span>MEET OUR Team</h2>
+                <h2 class="sec_heading wow fadeInLeft"><span>OUR Team</span>MEET OUR TEAM</h2>
                 <p class="wow fadeInLeft">We have top skilled memeber in our team for around the world!</p>
             </div>
             <div class="team_list">
@@ -444,7 +444,7 @@
         <div class="container">
             <div class="testimonials_inner">
                 <div class="sec_header">
-                    <h2 class="sec_heading wow fadeInLeft"><span>Testimonials</span>Our Clients Feedback</h2>
+                    <h2 class="sec_heading wow fadeInLeft"><span>Testimonials</span>Feedbacks</h2>
                     <p class="wow fadeInLeft">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla convallis
                         pulvinar vestibulum. Doneceleifend, sem sed dictum. Lorem ipsum dolor sit amet, consectetur
                         adipiscing elits</p>
