--- a/index.html
+++ b/index.html
@@ -94,11 +94,9 @@
             <div class="b_slide" style="background-image: url(assets/images/template-three/banner.jpg);">
                 <div class="container">
                     <div class="banner_caption text-center">
-                        <h3 data-animation="fadeInLeft" data-delay="0.5s">Challenge Your Self</h3>
-                        <h1 data-animation="fadeInLeft" data-delay="0.9s">Get Stronger Today</h1>
-                        <p data-animation="fadeInLeft" data-delay="1.3s">Lorem Ipsum is simply dummy text of the
-                            printing and typesetting industry. Lorem Ipsum has been the industry's standard
-                            dummy text ever since the 1500s</p>
+                        <h3 data-animation="fadeInLeft" data-delay="0.5s">A Land: Dubai Metaverse</h3>
+                        <h1 data-animation="fadeInLeft" data-delay="0.9s">Play for free!</h1>
+                        <p data-animation="fadeInLeft" data-delay="1.3s">Play first ever open-world Dubai Metaverse!</p>
                         <a href="#" class="btn btn_white" data-animation="fadeInUp" data-delay="1.6s">Read More</a>
                         <a href="#joiningPopup" class="btn btn_outline open-popup-link" data-animation="fadeInUp" data-delay="1.6s">Join Now</a>
                     </div>
