--- a/index.html
+++ b/index.html
@@ -56,12 +56,10 @@
                                     <li class="menu-item">
                                         <a href="#about">About</a>
                                     </li>
-                                    <li class="menu-item">
-                                        <a href="#portfolio">Gallary</a>
-                                    </li>
-                                    <li class="menu-item">
-                                        <a href="#service">services</a>
-                                    </li>
+                                    <!--    <li class="menu-item">
+        <a href="#portfolio">Gallary</a>
+    </li>-->
+
                                     <li class="menu-item">
                                         <a href="#team">team</a>
                                     </li>
@@ -70,18 +68,18 @@
                                     </li>
                                     <li class="menu-item"><a href="#contact">Contact</a></li>
                                 </ul>
-                            </div>
-                            <a href="#joiningPopup" class="get_quote btn orange_gradient open-popup-link">Play Now</a>
-                            <a class="menu-bar mobile-navigation" href="javascript:void(0)">
-                                <span class="menu-btn-icon">
-                                    <span></span>
-                                    <span></span>
-                                    <span></span>
-                                </span>
-                            </a>
-                        </nav>
-                        <!-- End Main Nav Menu -->
-                    </div>
+        </div>
+        <a href="#joiningPopup" class="get_quote btn orange_gradient open-popup-link">Play Now</a>
+        <a class="menu-bar mobile-navigation" href="javascript:void(0)">
+            <span class="menu-btn-icon">
+                <span></span>
+                <span></span>
+                <span></span>
+            </span>
+        </a>
+    </nav>
+    <!-- End Main Nav Menu -->
+</div>
                 </div>
             </div>
         </div>
@@ -787,34 +785,34 @@
                 <div class="footer_top_logo">
                     <a href="#" class="footer-logo"><img src="assets/images/template-three/logo-icon.png" alt="logo icon"></a>
                 </div>
-                <p>Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam</p>
+                <!--   <p>Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam</p> -->
             </div>
-            <div class="row text-center">
-                <div class="col-sm-4">
-                    <div class="footer_sec">
-                        <i class="fa fa-phone-alt"></i>
-                        <h3>Call Us On</h3>
-                        <a href="#!">(123) 456-7890</a>
-                    </div>
-                </div>
-                <div class="col-sm-4">
-                    <div class="footer_sec">
-                        <i class="fa fa-envelope"></i>
-                        <h3>Mail us on</h3>
-                        <a href="mailto:info@a.land">info@a.land</a>
-                    </div>
-                </div>
-                <div class="col-sm-4">
-                    <div class="footer_sec">
-                        <i class="fab fa-skype"></i>
-                        <h3>Lets Skype</h3>
-                        <a href="#">A Land</a>
-                    </div>
-                </div>
+    <div class="row text-center">
+        <div class="col-sm-4">
+            <div class="footer_sec">
+                <i class="fa fa-phone-alt"></i>
+                <h3>Call Us On</h3>
+                <a href="#!">(123) 456-7890</a>
             </div>
-            <div class="copyrigt_text d-flex justify-content-between">
-                <span>© Copyright 2022 A.Land Inc.</span>
-                <!-- social icons -->
+        </div>
+        <div class="col-sm-4">
+            <div class="footer_sec">
+                <i class="fa fa-envelope"></i>
+                <h3>Mail us on</h3>
+                <a href="mailto:info@a.land">info@a.land</a>
+            </div>
+        </div>
+        <div class="col-sm-4">
+            <div class="footer_sec">
+                <i class="fab fa-skype"></i>
+                <h3>Lets Skype</h3>
+                <a href="#">A Land</a>
+            </div>
+        </div>
+    </div>
+    <div class="copyrigt_text d-flex justify-content-between">
+        <span>© Copyright 2022 A.Land Inc.</span>
+        <!-- social icons -->
                 <div class="social_div">
                     <ul class="social_list">
                         <li><a href="#"><i class="fab fa-facebook-f"></i></a></li>
