--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
                                     <li class="menu-item"><a href="#contact">Contact</a></li>
                                 </ul>
                             </div>
-                            <a href="#joiningPopup" class="get_quote btn blue_gradient open-popup-link">Get a quote</a>
+                            <a href="#joiningPopup" class="get_quote btn blue_gradient open-popup-link">Play Now!</a>
                             <a class="menu-bar mobile-navigation" href="javascript:void(0)">
                                 <span class="menu-btn-icon">
                                     <span></span>
@@ -201,115 +201,6 @@
         </div>
     </section>
     <!-- /. About Section -->
-
-
-    <!-- portfolio Section -->
-    <section class="portfolio_tab_sec bg_light_gray" id="portfolio">
-        <div class="container">
-            <div class="sec_header text-center">
-                <h2 class="sec_heading wow fadeInLeft"><span>OUR LATEST Works</span>Our Portfolio Designs</h2>
-                <p class="wow fadeInLeft">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla convallis
-                    pulvinar vestibulum. Doneceleifend, sem sed dictum. Lorem ipsum dolor sit amet, consectetur
-                    adipiscing elits</p>
-            </div>
-        </div>
-        <div class="container-fluid">
-            <div class="portfolio_tabs">
-                <ul class="tabs_list text-center wow fadeInUp" id="filters">
-                    <li><a href="#!" class="filter active" data-filter=".designs, .development, .seo, .marketing">All</a></li>
-                    <li><a href="#!" class="filter" data-filter=".designs">Designs</a></li>
-                    <li><a href="#!" class="filter" data-filter=".development">Development</a></li>
-                    <li><a href="#!" class="filter" data-filter=".seo">SEO</a></li>
-                    <li><a href="#!" class="filter" data-filter=".marketing">Marketing</a></li>
-                </ul>
-                <div class="portfolio_list wow fadeInUp">
-                    <div id="portfoliolist">
-                            <div class="portfolio_item portfolio designs" data-cat="designs" style="display: inline-block;">
-                                <a href="assets/images/template-one/portfolio-1.jpg">
-                                    <img src="assets/images/template-one/portfolio-1.jpg" alt="portfolio">
-                                    <div class="p_caption">
-                                        <div class="plus_icon"></div>
-                                        <h4>Our Design 1</h4>
-                                        <p>Check Our Work</p>
-                                    </div>
-                                </a>
-                            </div>
-                            <div class="portfolio_item portfolio designs" data-cat="designs"  style="display: inline-block;">
-                                <a href="assets/images/template-one/portfolio-2.jpg">
-                                    <img src="assets/images/template-one/portfolio-2.jpg" alt="portfolio">
-                                    <div class="p_caption">
-                                        <div class="plus_icon"></div>
-                                        <h4>Our Design 1</h4>
-                                        <p>Check Our Work</p>
-                                    </div>
-                                </a>
-                            </div>
-                            <div class="portfolio_item portfolio development" data-cat="development"  style="display: inline-block;">
-                                <a href="assets/images/template-one/portfolio-3.jpg">
-                                    <img src="assets/images/template-one/portfolio-3.jpg" alt="portfolio">
-                                    <div class="p_caption">
-                                        <div class="plus_icon"></div>
-                                        <h4>Our Design 1</h4>
-                                        <p>Check Our Work</p>
-                                    </div>
-                                </a>
-                            </div>
-                            <div class="portfolio_item portfolio seo" data-cat="seo"  style="display: inline-block;">
-                                <a href="assets/images/template-one/portfolio-4.jpg">
-                                    <img src="assets/images/template-one/portfolio-4.jpg" alt="portfolio">
-                                    <div class="p_caption">
-                                        <div class="plus_icon"></div>
-                                        <h4>Our Design 1</h4>
-                                        <p>Check Our Work</p>
-                                    </div>
-                                </a> 
-                            </div>
-                            <div class="portfolio_item portfolio marketing" data-cat="marketing"  style="display: inline-block;">
-                                <a href="assets/images/template-one/portfolio-5.jpg">
-                                    <img src="assets/images/template-one/portfolio-5.jpg" alt="portfolio">
-                                    <div class="p_caption">
-                                        <div class="plus_icon"></div>
-                                        <h4>Our Design 1</h4>
-                                        <p>Check Our Work</p>
-                                    </div>
-                                </a>
-                            </div>
-                            <div class="portfolio_item portfolio marketing" data-cat="marketing"  style="display: inline-block;">
-                                <a href="assets/images/template-one/portfolio-6.jpg">
-                                    <img src="assets/images/template-one/portfolio-6.jpg" alt="portfolio">
-                                    <div class="p_caption">
-                                        <div class="plus_icon"></div>
-                                        <h4>Our Design 1</h4>
-                                        <p>Check Our Work</p>
-                                    </div>
-                                </a>
-                            </div>
-                            <div class="portfolio_item portfolio seo" data-cat="seo"  style="display: inline-block;">
-                                <a href="assets/images/template-one/portfolio-1.jpg">
-                                    <img src="assets/images/template-one/portfolio-1.jpg" alt="portfolio">
-                                    <div class="p_caption">
-                                        <div class="plus_icon"></div>
-                                        <h4>Our Design 1</h4>
-                                        <p>Check Our Work</p>
-                                    </div>
-                                </a>
-                            </div>
-                            <div class="portfolio_item portfolio development" data-cat="development"  style="display: inline-block;">
-                                <a href="assets/images/template-one/portfolio-2.jpg">
-                                    <img src="assets/images/template-one/portfolio-2.jpg" alt="portfolio">
-                                    <div class="p_caption">
-                                        <div class="plus_icon"></div>
-                                        <h4>Our Design 1</h4>
-                                        <p>Check Our Work</p>
-                                    </div>
-                                </a>
-                            </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </section>
-    <!-- /. portfolio Section -->
 
 
     <!-- Lets Work Section -->
