--- a/index.html
+++ b/index.html
@@ -674,73 +674,6 @@
         </div>
     </section><!-- /. News Section -->
 
-    <!-- Pricing Section -->
-    <section class="pricing_sec">
-        <div class="pricing_list">
-            <div class="container">
-                <div class="row">
-                    <div class="col-lg-4">
-                        <div class="pricing_item">
-                            <div class="pricing_value">
-                                <div class="p_v_per_month"><span>$</span>25<em>/mo</em></div>
-                                <div class="perYear">$250/year</div>
-                            </div>
-                            <div class="p_i_middle">
-                                <h3>Basic</h3>
-                                <ul class="pricing_info_list">
-                                    <li><i class="fa fa-check"></i>Lorem ipsum dolor sit amet</li>
-                                    <li><i class="fa fa-times"></i>Lorem ipsum dolor sit amet</li>
-                                    <li><i class="fa fa-times"></i>Lorem ipsum dolor sit amet</li>
-                                    <li><i class="fa fa-times"></i>Lorem ipsum dolor sit amet</li>
-                                    <li><i class="fa fa-times"></i>Lorem ipsum dolor sit amet</li>
-                                </ul>
-                                <a href="#" class="btn blue_gradient">Buy Now</a>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-lg-4">
-                        <div class="pricing_item">
-                            <div class="pricing_value">
-                                <div class="p_v_per_month"><span>$</span>35<em>/mo</em></div>
-                                <div class="perYear">$400/year</div>
-                            </div>
-                            <div class="p_i_middle">
-                                <h3>Premium</h3>
-                                <ul class="pricing_info_list">
-                                    <li><i class="fa fa-check"></i>Lorem ipsum dolor sit amet</li>
-                                    <li><i class="fa fa-check"></i>Lorem ipsum dolor sit amet</li>
-                                    <li><i class="fa fa-check"></i>Lorem ipsum dolor sit amet</li>
-                                    <li><i class="fa fa-times"></i>Lorem ipsum dolor sit amet</li>
-                                    <li><i class="fa fa-times"></i>Lorem ipsum dolor sit amet</li>
-                                </ul>
-                                <a href="#" class="btn blue_gradient">Buy Now</a>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-lg-4">
-                        <div class="pricing_item">
-                            <div class="pricing_value">
-                                <div class="p_v_per_month"><span>$</span>45<em>/mo</em></div>
-                                <div class="perYear">$510/year</div>
-                            </div>
-                            <div class="p_i_middle">
-                                <h3>Ultimate</h3>
-                                <ul class="pricing_info_list">
-                                    <li><i class="fa fa-check"></i>Lorem ipsum dolor sit amet</li>
-                                    <li><i class="fa fa-check"></i>Lorem ipsum dolor sit amet</li>
-                                    <li><i class="fa fa-check"></i>Lorem ipsum dolor sit amet</li>
-                                    <li><i class="fa fa-check"></i>Lorem ipsum dolor sit amet</li>
-                                    <li><i class="fa fa-check"></i>Lorem ipsum dolor sit amet</li>
-                                </ul>
-                                <a href="#" class="btn blue_gradient">Buy Now</a>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </section><!-- /. Pricing Section -->
-
     <!-- Contact Section -->
     <section class="contact_sec" id="contact">
         <div class="sec_header text-center">
@@ -764,7 +697,7 @@
                             <hr>
                             <h5><i class="fa fa-map-marker"></i> 1234 Some Avenue, New York, NY 56789
                             </h5>
-                            <h5><i class="fa fa-envelope"></i> info@youwebsite.com
+                            <h5><i class="fa fa-envelope"></i> info@a.land
                             </h5>
                             <h5><i class="fa fa-phone"></i> (123) 456-7890
                             </h5>
@@ -870,7 +803,7 @@
                     <div class="footer_sec">
                         <i class="fa fa-envelope"></i>
                         <h3>Mail us on</h3>
-                        <a href="mailto:info@youwebsite.com">info@youwebsite.com</a>
+                        <a href="mailto:info@youwebsite.com">info@a.land</a>
                     </div>
                 </div>
                 <div class="col-sm-4">
@@ -882,7 +815,7 @@
                 </div>
             </div>
             <div class="copyrigt_text d-flex justify-content-between">
-                <span>© Copyright 2019 Bevy templates, Inc.</span>
+                <span>© Copyright 2022 A Land Inc.</span>
                 <!-- social icons -->
                 <div class="social_div">
                     <ul class="social_list">
