--- a/index.html
+++ b/index.html
@@ -57,9 +57,6 @@
                                         <a href="#about">About</a>
                                     </li>
                                     <li class="menu-item">
-                                        <a href="#portfolio">Portfolio</a>
-                                    </li>
-                                    <li class="menu-item">
                                         <a href="#service">services</a>
                                     </li>
                                     <li class="menu-item">
@@ -844,8 +841,8 @@
   <div class="modal-content">      
         <!-- Modal Header -->
         <div class="modal-header text-center">
-          <h3 class="modal-title">Request for a Quote</h3>
-          <p>Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam</p>
+          <h3 class="modal-title">Play A Land: Dubai Metaverse!</h3>
+          <p>Please select your platform.</p>
           <button title="Close (Esc)" type="button" class="mfp-close">×</button>
         </div>        
         <!-- Modal body -->
