--- a/index.html
+++ b/index.html
@@ -423,10 +423,8 @@
         <div class="container">
             <div class="testimonials_inner">
                 <div class="sec_header">
-                    <h2 class="sec_heading wow fadeInLeft"><span>Testimonials</span>Our Clients Feedback</h2>
-                    <p class="wow fadeInLeft">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla convallis
-                        pulvinar vestibulum. Doneceleifend, sem sed dictum. Lorem ipsum dolor sit amet, consectetur
-                        adipiscing elits</p>
+                    <h2 class="sec_heading wow fadeInLeft"><span>Steam</span>Feedbacks</h2>
+                    <p class="wow fadeInLeft">Comments of the players of A Land: Dubai Metaverse on the Steam network.</p>
                 </div>
                 <div class="testi_wrap">
                     <div class="testi_slider dots_bottom">
@@ -807,7 +805,7 @@
                     <div class="footer_sec">
                         <i class="fab fa-skype"></i>
                         <h3>Lets Skype</h3>
-                        <a href="#">skype.tester</a>
+                        <a href="#">ALandMetaverse</a>
                     </div>
                 </div>
             </div>
