--- a/index.html
+++ b/index.html
@@ -784,7 +784,7 @@
                 <div class="footer_top_logo">
                     <a href="#" class="footer-logo"><img src="assets/images/template-one/logo-icon.png" alt="logo icon"></a>
                 </div>
-                <p>Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam</p>
+                <!--   <p>Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam</p>-->
             </div>
             <div class="row text-center">
                 <div class="col-sm-4">
