--- a/index.html
+++ b/index.html
@@ -147,7 +147,10 @@
             <div class="row align-items-center">
                 <div class="col-md-6">
                     <h2 class="sec_heading wow fadeInLeft"><span>A Land</span>Dubai Metaverse</h2>
-                    <p class="wow fadeInLeft">A Land </p>
+                    <p class="wow fadeInLeft">The aim of A LAND is to be a strong metaversal project with the aim of providing services to Dubai.<br>
+                    Currently, the project demo is on Steam
+                     It is available for Mac and Windows platform, it will be available for PlayStation 5 and Xbox in the next stages of development. A LAND game is released for free, but crypto will be used for in-app purchases.
+                    </p>
                 </div>
                 <div class="col-md-6">
                     <div class="about_right wow fadeInRight">
